# memento

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  CLAUDE.en.md  CLAUDE.md  Engram：分布式记忆操作系统与协作协议.md  GEMINI.md  GEMINI.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml  test_version.py  借鉴 Claude Code 记忆系统的启发与行动项.md
.github/: copilot-instructions.md
docs/: README.md  academic-references.en.md  academic-references.md  mathematical-foundations.md  merge-conflict-resolution.md
examples/: eval_queries.sample.json
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: hook-handler.sh  mcp-server.py  worker-service.py
scripts/: install-opencode-plugin.sh  memento-agent.sh  smoke-test.sh
src/memento/: __init__.py  api.py  awake.py  cli.py  config.py  core.py  db.py  decay.py  delta_fold.py  embedding.py  epoch.py  export.py  hebbian.py  llm.py  logging.py  mcp_server.py  migration.py  observation.py  prompts.py  repository.py  (+7 more)
tests/: conftest.py  test_api.py  test_awake.py  test_cli.py  test_config.py  test_core.py  test_dashboard.py  test_decay.py  test_decay_v05.py  test_delta_fold.py  test_e2e.py  test_embedding.py  test_epoch.py  test_export.py  test_hebbian.py  test_integration_worker.py  test_layered_priming.py  test_llm.py  test_local_embedding.py  test_mcp_server.py  test_migration.py  test_nexus_lifecycle.py  test_observation.py  test_prompts.py  test_repository.py  test_rigidity.py  test_session.py  test_setup.py  test_state_machine.py  test_subconscious.py  test_transcript.py  test_update.py  test_worker.py
(+36 files in other folders)
