[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "memento"
version = "0.1.0"
description = "Your long-term memory engine for AI Agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "google-genai>=1.0",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
local = ["sentence-transformers>=2.0"]
dev = ["pytest>=7.0"]

[project.scripts]
memento = "memento.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
